Update Lamy Project

--- a/Lamy/index.html
+++ b/Lamy/index.html
@@ -69,6 +69,51 @@
                 </div>
             </div>
         </section>
+
+        <section id="product" class="section_product">
+            <div class="section_product_category_list section_product_List">
+                <div>
+                    <h2>Our Category List</h2>
+                </div>
+                <div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="section_product_product_list section_product_List">
+                <div>
+                    <h2>Our Product List</h2>
+                </div>
+                <div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product1" />
+                        <h6>Writing Implements</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
