--- a/Lamy/index.html
+++ b/Lamy/index.html
@@ -4,64 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lamy</title>
+    <title>Lamy - Premium Writing Instruments</title>
+    <meta name="description" content="Experience timeless German craftsmanship with Lamy's premium writing instruments">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body class="">
+<body>
     <header class="main_header">
-        <!-- left side sidebar -->
         <div>
             <span></span>
         </div>
         <div>
-            <img src="assets/img/logo.png" alt="Lamy" width="150" height="40">
+            <img src="assets/img/logo.png" alt="Lamy" width="150" height="40" loading="lazy">
         </div>
         <nav>
             <ul>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="#"><img src="assets/img/cartIcon.svg" alt="User"></a></li>
-                <li><a href="#"><img src="assets/img/cartIcon.svg" alt="User"></a></li>
+                <li><a href="#"><img src="assets/img/cartIcon.svg" alt="Cart" loading="lazy"></a></li>
+                <li><a href="#"><img src="assets/img/cartIcon.svg" alt="User" loading="lazy"></a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="grid_container">
             <div class="grid_item grid_item-1">
                 <div>
                     <h1>Experience Timeless German Craftsmanship in Every Stroke</h1>
                     <p>Explore writing instruments that combine minimalist design, precise engineering, and lasting
-                        quality crafted for
-                        creators, thinkers, and visionaries.</p>
+                        quality crafted for creators, thinkers, and visionaries.</p>
                 </div>
                 <div>
                     <button type="button">Shop Now</button>
-                    <button type="button">&#x2191;</button>
+                    <button type="button" aria-label="Scroll up">&#x2191;</button>
                 </div>
                 <div>
                     <div>
                         <h3>25 Million+</h3>
-                        <p>Real Reviews from our happy customers!
-                            see what fashion lovers are saying about
-                            ourquality, style, and service.</p>
+                        <p>Real Reviews from our happy customers! See what fashion lovers are saying about our quality,
+                            style, and service.</p>
                     </div>
                     <div>
-                        <img src="assets/img/Female03.svg" alt="peopleIcon">
-                        <img src="assets/img/Female03.svg" alt="peopleIcon">
-                        <img src="assets/img/Female03.svg" alt="peopleIcon">
-                        <img src="assets/img/Female03.svg" alt="peopleIcon">
+                        <img src="assets/img/Female03.svg" alt="Customer" loading="lazy">
+                        <img src="assets/img/Female03.svg" alt="Customer" loading="lazy">
+                        <img src="assets/img/Female03.svg" alt="Customer" loading="lazy">
+                        <img src="assets/img/Female03.svg" alt="Customer" loading="lazy">
                     </div>
                 </div>
             </div>
-            <div class="grid_item grid_item-2"><img src="assets/img/pen.png" alt="pen"></div>
+            <div class="grid_item grid_item-2">
+                <img src="assets/img/pen.png" alt="Lamy pen" loading="lazy">
+            </div>
             <div class="grid_item grid_item-3">
                 <div>
-                    <img src="assets/img/digitalWriting1.png" alt="penset">
+                    <img src="assets/img/digitalWriting1.png" alt="Digital writing set" loading="lazy">
                 </div>
                 <div>
-                    <img src="assets/img/digitalWriting2.png" alt="penset">
+                    <img src="assets/img/digitalWriting2.png" alt="Digital writing set" loading="lazy">
                 </div>
                 <div>
                     <h3>Digital writing, the future of handwriting</h3>
@@ -77,19 +78,19 @@
                 </div>
                 <div>
                     <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
+                        <img src="assets/img/writing.png" alt="Writing Implements" loading="lazy">
                         <h6>Writing Implements</h6>
                     </div>
                     <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
+                        <img src="assets/img/writing.png" alt="Writing Implements" loading="lazy">
                         <h6>Writing Implements</h6>
                     </div>
                     <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
+                        <img src="assets/img/writing.png" alt="Writing Implements" loading="lazy">
                         <h6>Writing Implements</h6>
                     </div>
                     <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
+                        <img src="assets/img/writing.png" alt="Writing Implements" loading="lazy">
                         <h6>Writing Implements</h6>
                     </div>
                 </div>
@@ -100,22 +101,138 @@
                 </div>
                 <div>
                     <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
+                        <img src="assets/img/writing.png" alt="Product" loading="lazy">
+                        <h6>Writing Implements <span><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M14 16L18 12M18 12L14 8M18 12H6" stroke="black" stroke-width="1.5"
+                                        stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </span></h6>
+                    </div>
+                    <div class="catergory">
+                        <img src="assets/img/writing.png" alt="Product" loading="lazy">
                         <h6>Writing Implements</h6>
                     </div>
                     <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
-                        <h6>Writing Implements</h6>
-                    </div>
-                    <div class="catergory">
-                        <img src="assets/img/writing.png" alt="Product1" />
+                        <img src="assets/img/writing.png" alt="Product" loading="lazy">
                         <h6>Writing Implements</h6>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="lamy-section">
+            <div class="lamy-block">
+                <div class="lamy-img">
+                    <img src="assets/img/lamyInspiration.png" alt="Lamy inspiration" loading="lazy">
+                </div>
+                <div class="lamy-content">
+                    <h2>LAMY inspiration: design, culture and creativity</h2>
+                    <p>No matter how you want to creatively use your LAMY writing instrument, here you can find the best
+                        sources of inspiration for bullet journaling, hand lettering and creative techniques.</p>
+                    <button>Find new inspiration with LAMY</button>
+                </div>
+            </div>
+            <div class="lamy-block">
+                <div class="lamy-img">
+                    <img src="assets/img/lamyInspiration.png" alt="Lamy inspiration" loading="lazy">
+                </div>
+                <div class="lamy-content">
+                    <h2>LAMY inspiration: design, culture and creativity</h2>
+                    <p>No matter how you want to creatively use your LAMY writing instrument, here you can find the best
+                        sources of inspiration for bullet journaling, hand lettering and creative techniques.</p>
+                    <button>Find new inspiration with LAMY</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="features">
+            <div class="feature-box">
+                <img src="assets/img/Design.png" alt="Design icon" loading="lazy">
+                <h3>Made in Germany</h3>
+                <p>We are a company from Heidelberg and are one of the leading German manufacturers of writing
+                    instruments.</p>
+            </div>
+            <div class="feature-box">
+                <img src="assets/img/Design.png" alt="Design icon" loading="lazy">
+                <h3>Made in Germany</h3>
+                <p>We are a company from Heidelberg and are one of the leading German manufacturers of writing
+                    instruments.</p>
+            </div>
+            <div class="feature-box">
+                <img src="assets/img/Design.png" alt="Design icon" loading="lazy">
+                <h3>Made in Germany</h3>
+                <p>We are a company from Heidelberg and are one of the leading German manufacturers of writing
+                    instruments.</p>
+            </div>
+            <div class="feature-box">
+                <img src="assets/img/Design.png" alt="Design icon" loading="lazy">
+                <h3>Made in Germany</h3>
+                <p>We are a company from Heidelberg and are one of the leading German manufacturers of writing
+                    instruments.</p>
+            </div>
+        </section>
+
+        <section class="cta">
+            <div class="cta_container">
+                <div class="cta_content">
+                    <h2>Don't miss a thing!</h2>
+                    <p>Receive all the latest news and offers conveniently by newsletter. Register now!</p>
+                </div>
+                <div class="cta_form">
+                    <form>
+                        <div>
+                            <label for="Email">Email <sup>*</sup></label>
+                            <input type="email" id="Email" required placeholder="Your email address">
+                            <button type="submit">Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <img src="assets/img/logo.png" alt="Lamy" width="200" height="50" loading="lazy">
+            </div>
+            <div class="footer-column">
+                <h3>Service</h3>
+                <ul>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Care tips</a></li>
+                    <li><a href="#">Fountain Pen Nib Guide</a></li>
+                    <li><a href="#">Repairs</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>About us</h3>
+                <ul>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Find a retailer</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Legal</h3>
+                <ul>
+                    <li><a href="#">Terms of service</a></li>
+                    <li><a href="#">Return and refund policy</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Shipping policy</a></li>
+                    <li><a href="#">Whistleblower-System</a></li>
+                    <li><a href="#">Imprint</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Payment Methods</h3>
+                <div class="payment-methods">
+                    <img src="visa.png" alt="VISA" loading="lazy">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
