update the code

--- a/lib_mang/index.html
+++ b/lib_mang/index.html
@@ -37,6 +37,10 @@
         </form>
     </section>
 
+    <section id="book-collection">
+
+    </section>
+
     <script src="script/script.js" type="module"></script>
 </body>
 
